Moving hidden overflow to pages that need it (fixing select2 problem)

--- a/src/Finastra.Hackathon.Web/wwwroot/css/site.less
+++ b/src/Finastra.Hackathon.Web/wwwroot/css/site.less
@@ -20,7 +20,6 @@ html, body {
     position: relative;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
 }
 
 body {
